tests/paczka1/small_fuzzy/29546174.err
Error in line 5: XTauLrX A942 70,9
Error in line 6: MNlJ A743 644,1
Error in line 9: MNlJ A942 61,4
Error in line 1: n6Gva0 A963 76,6
